Changes "Hello" to "Goodbye"

--- a/index.njk
+++ b/index.njk
@@ -7,7 +7,7 @@
     <div>
       <span class="text-change">Good design</span><br/>
       <span class="change">is<br/>as little design<br/>as possible</span><br/>
-      <span x-data="{message:'🤖 Hello World 🤓'}" x-text="message"></span>
+      <span x-data="{message:'🤖 Goodbye World 🤓'}" x-text="message"></span>
     </div>
   </div>
 {% endblock %}
