--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -5,7 +5,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>My Rad Nunjucks Blog Post</title>
 	</head>
-	<body style="prose">
-        {{ content | safe }}
+	<body >
+        <article style="prose">
+         {{ content | safe }}
+         </article>
 	</body>
 </html>
