--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -1,8 +1,5 @@
 {% extends "_includes/default.njk" %}
 
-{% block title %}It does work{% endblock %}
-
-
-  <article style="prose">
-	{{ content | safe }}
-	</article>
+<article style="prose">
+	{{ content }}
+</article>
