Changes to "class"

--- a/_includes/post.njk
+++ b/_includes/post.njk
@@ -1,7 +1,7 @@
 {% extends "_includes/default.njk" %}
 
 {% block content %}
-<article style="prose">
+<article class="prose">
 	{{ content | safe }}
 </article>
 
